для JaZemla